@@ -1,15 +1,14 @@
-package kg.attractor.microgram.service;
+package com.suslike.web.service;
 
-import kg.attractor.microgram.dao.LikeDao;
-import kg.attractor.microgram.dto.LikeDto;
-import kg.attractor.microgram.models.Likes;
+import com.suslike.web.dao.LikeDao;
+import com.suslike.web.dto.LikeDto;
+import com.suslike.web.models.Like;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -18,28 +17,27 @@ public class LikeService {
     private final LikeDao likeDao;
 
     public List<LikeDto> getAllLikesByPostId(Long id) {
-        return likeDao.getAllLikesByPostID(id).stream().map(this::getDto).collect(Collectors.toList());
+        return likeDao.getAllLikesByPostID(id).stream().map(this::getDto).toList();
     }
 
     public void create(LikeDto dto) {
-        Likes like = likeDao.getLikeBYEmailAndPost(dto.getLikerEmail(), dto.getPostId()).orElse(null);
+        Like like = likeDao.getLikeByIdAndPost(dto.getLiker(), dto.getPostId()).orElse(null);
         if (like != null) {
-            if (Objects.equals(like.getPostId(), dto.getPostId()) && Objects.equals(like.getLiker(), dto.getLikerEmail())) {
+            if (Objects.equals(like.getPostId(), dto.getPostId()) && Objects.equals(like.getLiker(), dto.getLiker())) {
                 likeDao.delete(like.getId());
             }
         } else {
-            likeDao.create(Likes.builder()
-                    .liker(dto.getLikerEmail())
+            likeDao.create(Like.builder()
+                    .liker(dto.getLiker())
                     .postId(dto.getPostId())
                     .build());
         }
     }
 
-
-    private LikeDto getDto(Likes l) {
+    private LikeDto getDto(Like l) {
         return LikeDto.builder()
                 .id(l.getId())
-                .likerEmail(l.getLiker())
+                .liker(l.getLiker())
                 .postId(l.getPostId())
                 .build();
     }
